--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "next": "latest",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "string-similarity": "^4.0.4"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^5.0.0",
