--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hash-scroll": "^1.4.7",
     "string-similarity": "^4.0.4"
   },
   "devDependencies": {
