--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hash-scroll": "^1.4.7",
+    "react-tooltip": "^4.5.0",
     "string-similarity": "^4.0.4"
   },
   "devDependencies": {
