--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "next": "latest",
     "react": "^18.2.0",
+    "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
     "react-hash-scroll": "^1.4.7",
+    "react-syntax-highlighter": "^15.5.0",
     "react-tooltip": "^4.5.0",
     "string-similarity": "^4.0.4"
   },
