--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -17,14 +18,20 @@
     "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
     "react-hash-scroll": "^1.4.7",
+    "react-markdown": "^8.0.4",
     "react-syntax-highlighter": "^15.5.0",
     "react-tooltip": "^4.5.0",
     "recharts": "^2.1.16",
+    "rehype-slug": "^5.1.0",
+    "remark-gfm": "^3.0.1",
+    "remark-hint": "^1.0.10",
+    "remark-toc": "^8.0.1",
     "string-similarity": "^4.0.4",
     "tailwind-scrollbar": "^2.0.1"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^5.0.0",
+    "@tailwindcss/typography": "^0.5.8",
     "@types/node": "^12.12.21",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
