--- a/src/biomes.json
+++ b/src/biomes.json
@@ -91,5 +91,11 @@
         "snowy plains",
         "ice spikes",
         "frozen river"
+    ],
+    "end_treasure": [
+        "the end"
+    ],
+    "nether_treasure": [
+        "the nether"
     ]
 }
